--- a/WpfApp3/Views/Windows/MainWindow.xaml
+++ b/WpfApp3/Views/Windows/MainWindow.xaml
@@ -19,7 +19,7 @@
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem MaxWidth="350" MinWidth="150">
-                <TextBlock Text="zxc"/>
+                <TextBlock Text="{Binding Status}"/>
             </StatusBarItem>
             <StatusBarItem>
                 <ProgressBar Width="120" Height="14" Value="30"/>
@@ -38,6 +38,7 @@
                     </Grid.ColumnDefinitions>
                     <Rectangle Grid.Column="0" Grid.Row="0" Margin="5,7" Fill="AliceBlue" Stroke="Aqua" StrokeThickness="3" RadiusX="5" RadiusY="7"/>
                     <Ellipse Grid.Column="2" Grid.Row="0" Margin="5,7" Fill="AliceBlue" Stroke="Aqua" StrokeThickness="3"/>
+                    <GridSplitter Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Width="4"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Panel2">
